# cryri

./: README.md  pyproject.toml  requirements.txt  setup.py
cryri/: api.py  config.py  display.py  job_manager.py  main.py  run.yaml  script_builder.py  validators.py
tests/: test_main.py  test_submit_run.py  test_validators.py
