[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cryri"
dynamic = ["version"]
description = "Simplification of job-lib experimenting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "Alexey Skrynnik" },
]
dependencies = [
    "pydantic",
    "requests",
    "rich",
    "pyyaml",
    "typer>=0.9.0",
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["flake8", "pylint"]

[project.urls]
Homepage = "https://github.com/Tviskaron/cryri"

[project.scripts]
cryri = "cryri.main:main"

[tool.setuptools.dynamic]
version = { attr = "cryri.__version__" }

[tool.setuptools.packages.find]
include = ["cryri*"]

[tool.setuptools.package-data]
cryri = ["run.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
